[tool.poetry]
name = "omega-miya"
version = "0.9.1"
description = "基于 nonebot2 的多平台机器人"
authors = ["Ailitonia <41713304+Ailitonia@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
nonebot2 = { version = "2.3.3", extras = ["fastapi", "aiohttp", "httpx", "websockets"] }
pydantic = ">=2.8.0,<3.0.0"
nonebot-adapter-console = ">=0.6.0,<1.0.0"
nonebot-adapter-onebot = ">=2.4.6,<2.5.0"
nonebot-adapter-qq = ">=1.5.3,<1.6.0"
nonebot-adapter-telegram = ">=0.1.0b18,<0.2.0"
nonebot-plugin-apscheduler = ">=0.5.0,<1.0.0"
sqlalchemy = ">=2.0.36,<3.0.0"
asyncmy = {version = ">=0.2.9,<1.0.0", optional = true}
aiomysql = {version = ">=0.2.0,<1.0.0", optional = true}
asyncpg = { version = ">=0.30.0,<1.0.0", optional = true }
aiosqlite = {version = ">=0.20.0,<1.0.0", optional = true}
apscheduler = ">=3.10.4,<4.0.0"
aiofiles = ">=24.0.0,<25.0.0"
ujson = ">=5.10.0,<6.0.0"
lxml = ">=5.3.0,<6.0.0"
msgpack = ">=1.0.8,<2.0.0"
numpy = ">=2.1.0,<3.0.0"
matplotlib = ">=3.9.0,<4.0.0"
pillow = ">=11.0.0,<12.0.0"
imageio = ">=2.35.0,<3.0.0"
psutil = ">=6.1.0,<7.0.0"
pycryptodome = ">=3.21.0,<4.0.0"
py7zr = ">=0.21.0,<1.0.0"
pytz = "^2024.2"
zhconv = ">=1.4.3,<2.0.0"
rapidfuzz = ">=3.10.1,<4.0.0"
emoji = ">=2.14.0,<3.0.0"
openpyxl = ">=3.1.2,<4.0.0"
qrcode = { extras = ["pil"], version = ">=8.0.0,<9.0.0" }
onedice = "1.0.7"


[tool.poetry.extras]
mysql = ["asyncmy", "aiomysql"]
pgsql = ["asyncpg"]
sqlite = ["aiosqlite"]


[tool.poetry.group.dev.dependencies]
mypy = ">=1.13.0,<2.0.0"
bump-pydantic = "^0.8.0"
types-lxml = "^2024.3.27"
lxml-stubs = "^0.5.1"
alembic = "^1.13.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
